# rusty_pipe_cli

./: Cargo.toml
.github/workflows/: release.yml
src/: decode_m4a.rs  downloader.rs  lib.rs  main.rs  output.rs  player.rs  yt_downloader.rs
src/cli_ui/: mod.rs
src/cli_ui/util/: event.rs
src/r_player/: mod.rs
src/server/: mod.rs  schema.rs  search.rs  stream.rs
