[package]
name = "rusty_pipe_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_pipe = { git = "https://github.com/deep-gaurav/rusty_pipe.git" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "1.0.0"
tokio = { version = "1", features = ["full"] }
# rodio = "0.14"
# redlux = "0.4"
async-trait = "0.1"
quick-js = "0.4.0"
failure = "0.1.8"
bytes = "1"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", features = [
    "isomp4",
    "aac",
] }
cpal = "0.13.3"
rb = "0.3.2"
log = "*"
lazy_static = "1"
