[package]
name = "rusty_pipe_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_pipe = { git = "https://github.com/deep-gaurav/rusty_pipe.git" }
# reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "1.0.0"
# tokio = { version = "1", features = ["full"] }
# rodio = "0.14"
# redlux = "0.4"
async-trait = "0.1"
failure = "0.1.8"
bytes = "1"
symphonia = { git = "https://github.com/deep-gaurav/Symphonia.git", features = [
    "isomp4",
    "aac",
] }
cpal = {git = "https://github.com/deep-gaurav/cpal.git"}
rb = "0.3.2"
log = "*"
lazy_static = "1"
async-std = "1"
surf = { version = "2", features = [
    "hyper-client",
    "middleware-logger",
    "encoding",
], default-features = false }
pretty_env_logger = "0.4.0"
samplerate = "0.2"
anyhow = "1.0.44"
futures = "0.3"
async-graphql = "2.0"
async-graphql-tide = "2.0"
serde = "1"
serde_json = "1"
tide = "0.16"
crossbeam-channel = "0.5"
tui = { version = "0.16", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.9"
crossterm = { version = "0.21", features = ["event-stream"] }
rand = "0.8"
# Boa = { git = "https://github.com/boa-dev/boa.git" }
portpicker = "0.1.1"
dirs = "4.0.0"
quick-js="0.4"
# oboe = {version = "0.4.4",features = ["shared-stdcxx"]}
# aaudio = "0.1"

[profile.release]
# lto = true

[target.x86_64-pc-windows-gnu]

# [patch.crates-io]
# bitflags = "1.3.2"
# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
